# marky

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  document.rs  included.rs  ioutil.rs  log.rs  main.rs  paths.rs  pdf.rs  server.rs  service.rs  themes.rs  watcher.rs
static/themes/: sakura-dark.css  sakura.css  tufte.css
templates/: template.hbs
