[package]
name = "marky"
version = "0.2.0"
edition = "2021"
description = "Markdown to HTML converter with beautiful themes"
license = "MIT"
repository = "https://github.com/metafates/marky"
authors = ["metafates"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["cargo", "derive", "env"] }
colored = "2.0.0"
dirs = "4.0.0"
include_dir = "0.7.3"
markdown = "1.0.0-alpha.5"
minifier = "0.2.2"
notify = "5.1.0"
open = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.0"
url = { version = "2.3.1", features = ["serde"] }
