[package]
name = "marky"
version = "0.5.0"
edition = "2021"
description = "Markdown Magician 🧙"
license = "MIT"
repository = "https://github.com/metafates/marky"
authors = ["metafates"]
categories = ["command-line-utilities", "parsing", "visualization"]
keywords = ["markdown", "html", "pdf", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
atty = "0.2.14"
clap = { version = "4.1.4", features = ["cargo", "derive", "env"] }
clap_complete = "4.1.1"
colored = "2.0.0"
dirs = "4.0.0"
headless_chrome = { version = "1.0.2", features = ["fetch"] }
humansize = "2.1.3"
include_dir = "0.7.3"
levenshtein = "1.0.5"
markdown = "1.0.0-alpha.5"
minifier = "0.2.2"
notify = "5.1.0"
open = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
tempfile = "3.3.0"
toml = "0.7.0"
tokio = { version = "1.25.0", features = [
  "rt-multi-thread",
  "macros",
  "io-util",
] }
axum = { version = "0.6.4", default-features = false, features = [
  "headers",
  "http1",
  "ws",
] }
handlebars = "4.3.6"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
